fixed height issue emails overlapping with the footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,6 +62,7 @@ footer {
   bottom: 20px;
   left: 50%;
   right: 50%;
+  z-index:0;
 }
 
 nav {
@@ -190,6 +191,7 @@ main {
   margin: auto 20px;
   padding: 20px;
   list-style: none;
+  z-index: 10;
 }
 
 .email {
@@ -613,6 +615,7 @@ input[name="file"]::file-selector-button {
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
     margin: auto;
+    max-height: 300px;
   }
   .emails-main {
     width: 100%;
